fixed body overflow auto, added swipe close, close btn has his own section

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,22 @@ button:focus-visible {
   border-radius: 8px;
 }
 
+@media (max-width: 768px) {
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  *::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  * {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+}
+
 @media (min-width: 768px) {
   .fade-enter {
     transform: translate(10px);
